exports[`Timeline component should be rendered correctly with params if params from router provided 1`] = `
<div>
  <_translate
    viewName="photos" />
  <_translate
    isFetching={true}
    isFirstFetch={false}
    isIndexing={false}
    mangoIndexByDate="_design/54d3474c4efdfe10d790425525e56433857955a1"
    onFirstFetch={[Function]}
    params={
      Object {
        "photoId": "33dda00f0eec15bc3b3c59a615001ac8",
      }
    }
    photos={Array []} />
</div>
`;

exports[`Timeline component should be rendered correctly without store 1`] = `
<div>
  <_translate
    viewName="photos" />
  <_translate
    isFetching={true}
    isFirstFetch={false}
    isIndexing={false}
    mangoIndexByDate="_design/54d3474c4efdfe10d790425525e56433857955a1"
    onFirstFetch={[Function]}
    photos={Array []} />
</div>
`;

exports[`Timeline component should have correct connected provided props 1`] = `
<Timeline
  isFetching={true}
  isIndexing={false}
  isWorking={false}
  mangoIndexByDate="_design/54d3474c4efdfe10d790425525e56433857955a1"
  onFirstFetch={[Function]}
  onPhotoToggle={[Function]}
  photosByMonth={Object {}}
  selected={Array []}
  showSelection={false}
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  } />
`;

exports[`Timeline component should render correctly if it has correct connected provided props 1`] = `
<div>
  <_translate
    viewName="photos" />
  <_translate
    isFetching={true}
    isFirstFetch={true}
    isIndexing={false}
    isWorking={false}
    mangoIndexByDate="_design/54d3474c4efdfe10d790425525e56433857955a1"
    onFirstFetch={[Function]}
    onPhotoToggle={[Function]}
    photosByMonth={Object {}}
    selected={Array []}
    showSelection={false}
    store={
      Object {
        "clearActions": [Function],
        "dispatch": [Function],
        "getActions": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      }
    } />
</div>
`;
